--- a/language/references.xml
+++ b/language/references.xml
@@ -1,4 +1,4 @@
- <chapter id="language.references">
+﻿ <chapter id="language.references">
   <title>References Explained</title>
 
   <sect1 id="language.references.whatare">
