--- a/language/expressions.xml
+++ b/language/expressions.xml
@@ -1,38 +1,28 @@
-﻿ <chapter id="language.expressions">
-   <title>Expressions</title>
-
-   <simpara>
-    Expressions are the most important building stones of PHP.  In PHP,
-    almost anything you write is an expression.  The simplest yet
-    most accurate way to define an expression is "anything that has a
-    value".</simpara>
-
-   <simpara>
-    The most basic forms of expressions are constants and variables.
-    When you type "$a = 5", you're assigning '5' into $a.  '5', obviously,
-    has the value 5, or in other words '5' is an expression with the
-    value of 5 (in this case, '5' is an integer constant).</simpara>
-
-   <simpara>
-    After this assignment, you'd expect $a's value to be 5 as
-    well, so if you wrote $b = $a, you'd expect it to behave just as
-    if you wrote $b = 5.  In other words, $a is an expression with the
-    value of 5 as well.  If everything works right, this is exactly
-    what will happen.</simpara>
-
-   <para>
-    Slightly more complex examples for expressions are functions.  For
-    instance, consider the following function:
-
+<chapter id="language.expressions">
+	<title>표현식 (Expressions)</title>
+	<simpara>
+	표현식은 PHP에서 매우 중요한 내용이다. 
+	PHP에서 여러분이 작성하는 거의 모든 것은 표현식이다. 
+	간단히 표현식의 정의를 엄밀하게 말한다면 "값을 가지고 있는 모든 것"("anything that has a value")이다.
+	</simpara>
+	<simpara>
+	간단한 예제로 "$a = 5"와 같은 것이 있다. 이것은 '5'라는 값을 $a라는 변수에 대입하는 문장이다. 
+	여기서 '5'라는 표현식은 값 5 라는 의미가 된다. 
+	</simpara>
+	<simpara>
+	위의 문장 다음에 "$b = $a"라는 문장이 있다면, 여기서 $a라는 표현식은 그 변수가 가진 5라는 값을 표현한다.
+	</simpara>
+	<para>
+	조금 복잡한 경우는 함수이다. 다음 함수를 보자. : 
     <informalexample>
-     <programlisting>
+			<programlisting>
 function foo () {
     return 5;
 }
      </programlisting>
-    </informalexample></para>
-
-   <simpara>
+		</informalexample>
+	</para>
+	<simpara>
     Assuming you're familiar with the concept of functions (if you're
     not, take a look at the chapter about functions), you'd assume
     that typing <literal>$c = foo()</literal> is essentially just like
@@ -40,8 +30,7 @@ function foo () {
     are expressions with the value of their return value.  Since foo()
     returns 5, the value of the expression 'foo()' is 5.  Usually
     functions don't just return a static value but compute something.</simpara>
-
-   <simpara>
+	<simpara>
     Of course, values in PHP don't have to be integers, and very often
     they aren't.  PHP supports three scalar value types: integer values,
     floating point values and string values (scalar values are values that
@@ -49,8 +38,7 @@ function foo () {
     PHP also supports two composite (non-scalar) types: arrays and
     objects.  Each of these value types can be assigned into variables or
     returned from functions.</simpara>
-
-   <simpara>
+	<simpara>
     So far, users of PHP/FI 2 shouldn't feel any change.  However, PHP
     takes expressions much further, in the same way many other
     languages do.  PHP is an expression-oriented language, in the
@@ -66,8 +54,7 @@ function foo () {
     '$b = ($a = 5)' is like writing '$a = 5; $b = 5;' (a semicolon
     marks the end of a statement).  Since assignments are parsed in a
     right to left order, you can also write '$b = $a = 5'.</simpara>
-
-   <simpara>
+	<simpara>
     Another good example of expression orientation is pre- and
     post-increment and decrement.  Users of PHP/FI 2 and many other
     languages may be familiar with the notation of variable++ and
@@ -86,8 +73,7 @@ function foo () {
     written '$variable++' evaluates to the original value of
     $variable, before it was incremented (PHP increments the variable
     after reading its value, thus the name 'post-increment').</simpara>
-
-   <simpara>
+	<simpara>
     A very common type of expressions are comparison expressions.
     These expressions evaluate to either 0 or 1, meaning FALSE or TRUE
     (respectively).  PHP supports &gt; (bigger than), &gt;= (bigger than
@@ -95,8 +81,7 @@ function foo () {
     (smaller than or equal to).  These expressions are most commonly used
     inside conditional execution, such as <literal>if</literal>
     statements.</simpara>
-
-   <simpara>
+	<simpara>
     The last example of expressions we'll deal with here is combined
     operator-assignment expressions.  You already know that if you
     want to increment $a by 1, you can simply write '$a++' or '++$a'.
@@ -117,26 +102,26 @@ function foo () {
     assigned into $a).  Any two-place operator can be used in this
     operator-assignment mode, for example '$a -= 5' (subtract 5 from
     the value of $a), '$b *= 7' (multiply the value of $b by 7), etc.</simpara>
-
-   <para>
+	<para>
     There is one more expression that may seem odd if you haven't seen
     it in other languages, the ternary conditional operator:
 
-    <informalexample><programlisting>
+    <informalexample>
+			<programlisting>
 $first ? $second : $third
-</programlisting></informalexample>
+</programlisting>
+		</informalexample>
 
     If the value of the first subexpression is true (non-zero), then
     it the second subexpression is evaluated, and that is the result
     of the conditional expression. Otherwise, the third subexpression
     is evaluated, and that is the value.</para>
-
-   <para>
+	<para>
     The following example should help you understand pre- and
     post-increment and expressions in general a bit better:
 
     <informalexample>
-     <programlisting>
+			<programlisting>
 function double($i) {
     return $i*2;
 }
@@ -156,9 +141,10 @@ $h = $g += 10;      /* first, $g is incremented by 10 and ends with the
                        value of 24. the value of the assignment (24) is 
                        then assigned into $h, and $h ends with the value 
                        of 24 as well. */
-</programlisting></informalexample></para>
-
-   <simpara>
+</programlisting>
+		</informalexample>
+	</para>
+	<simpara>
     In the beginning of the chapter we said that we'll be describing
     the various statement types, and as promised, expressions can be
     statements.  However, not every expression is a statement.  In
@@ -166,8 +152,7 @@ $h = $g += 10;      /* first, $g is incremented by 10 and ends with the
     expression followed by a semicolon.  In '$b=$a=5;', $a=5 is a
     valid expression, but it's not a statement by itself.  '$b=$a=5;'
     however is a valid statement.</simpara>
-
-   <simpara>
+	<simpara>
     One last thing worth mentioning is the truth value of expressions.
     In many events, mainly in conditional execution and loops, you're
     not interested in the specific value of the expression, but only
@@ -180,18 +165,15 @@ $h = $g += 10;      /* first, $g is incremented by 10 and ends with the
     With non-scalar values (arrays and objects) - if the value
     contains no elements it's considered FALSE, otherwise it's
     considered TRUE.</simpara>
-
-   <simpara>
+	<simpara>
     PHP provides a full and powerful implementation of expressions, and
     documenting it entirely goes beyond the scope of this manual. The
     above examples should give you a good idea about what expressions
     are and how you can construct useful expressions. Throughout the
     rest of this manual we'll write <replaceable>expr</replaceable>
     to indicate any valid PHP expression.</simpara>
-
-  </chapter>
- 
- <!-- Keep this comment at the end of the file
+</chapter>
+<!-- Keep this comment at the end of the file
  Local variables:
  mode: sgml
  sgml-omittag:t
