deleted a unicode tag in korean files and update translation.
git-svn-id: https://svn.php.net/repository/phpdoc/kr/trunk@39234 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/language/references.xml
+++ b/language/references.xml
@@ -1,4 +1,4 @@
-﻿ <chapter id="language.references">
+ <chapter id="language.references">
   <title>References Explained</title>
 
   <sect1 id="language.references.whatare">
