--- a/language/basic-syntax.xml
+++ b/language/basic-syntax.xml
@@ -1,4 +1,3 @@
-<!-- edited with XML Spy v2.5 NT  - http://www.xmlspy.com -->
 <chapter id="language.basic-syntax">
 	<title>기본 문법(Basic syntax)</title>
 	<sect1 id="language.basic-syntax.phpmode">
@@ -71,11 +70,11 @@
     <informalexample>
 				<programlisting>
 &lt;?php
-    echo "This is a test"; // This is a one-line c++ style comment
-    /* This is a multi line comment
-       yet another line of comment */
+    echo "This is a test"; // C++ 형태의 한줄 주석
+    /* 여러줄의 주석
+       이줄까지 주석처리 된다 */
     echo "This is yet another test";
-    echo "One Final Test"; # This is shell-style style comment
+    echo "One Final Test"; # shell 형태의 한줄 주석
 ?>
      </programlisting>
 			</informalexample>
@@ -96,7 +95,7 @@
 			<programlisting>
 &lt;?php
  /* 
-    echo "This is a test"; /* This comment will cause a problem */
+    echo "This is a test"; /* 이 주석은 중복 사용(주석내의 주석)되었으므로 문제의 소지가 있다 */
  */
 ?>
     </programlisting>
